# stellars_jupyterlab_extensions

./: Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md  JOURNAL.md
.github/workflows/: build.yml
.ipynb_checkpoints/: README-checkpoint.md
stellars_jupyterlab_extensions/: __init__.py
