[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stellars_jupyterlab_extensions"
version = "1.0.15"
description = "Metapackage aggregating all Stellars JupyterLab extensions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Konrad Jelen", email = "konrad.jelen+github@gmail.com"}
]
keywords = ["jupyterlab", "jupyter", "extensions"]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jupyterlab_close_all_tabs_extension",
    "jupyterlab_colourful_tab_extension",
    "jupyterlab_doc_reader_extension",
    "jupyterlab_drawio_render_extension",
    "jupyterlab_export_markdown_extension",
    "jupyterlab_fit_image_size_extension",
    "jupyterlab_fold_all_code_extension",
    "jupyterlab_github_markdown_alerts_extension",
    "jupyterlab_nb_venv_kernels_ui_extension",
    "jupyterlab_makefile_file_type_extension",
    "jupyterlab_markdown_insert_content_extension",
    "jupyterlab_mmd_to_png_extension",
    "jupyterlab_notifications_extension",
    "jupyterlab_refresh_view_extension",
    "jupyterlab_tabular_data_viewer_extension",
    "jupyterlab_terminal_show_in_file_browser_extension",
    "jupyterlab_terraform_file_type_extension",
    "jupyterlab_vscode_icons_extension",
    "jupyterlab_zip_extension",
]

[project.urls]
Homepage = "https://github.com/stellarshenson"
Repository = "https://github.com/stellarshenson"
